fixed spacing issues in main page when adding products

--- a/css/Main/style.css
+++ b/css/Main/style.css
@@ -1,4 +1,4 @@
-main{
+/*main{
 	font-size: 62.5%;
 	padding: 0px;
 	box-sizing: border-box;
@@ -10,7 +10,7 @@ main{
 	display: flex;
 	flex-wrap: wrap;
 	justify-content: space-between;
-}
+}*/
 
 main .card{
 	max-width: 300px;
